--- a/README
+++ b/README
@@ -1,12 +1,36 @@
-Index
+Code Library introduction
+-------------------------------------------------------------------------------
+    Code library is my library of programming knowledge. Concept debriefing and
+    code reference/ snippets can be found in different excel workbook.
 
-1. Input source:
-	a. AS400 codes
-	b. EClipse workspace
-	d. Migrate as400_learning_note.xlsx
+Two topics
+-------------------------------------------------------------------------------
+    1.  index.xlsx  This workbook records concepts, resources or facts regards
+                    different topics
+                    
+    2.  *_lib.xlsx  These workbooks record code snippets on different subjects,
+                    and format in a subject/topic/content sequence by rows.
 
-2. The principle of adding entry:
-	a. Dont record too much and too detail: it should only comes to frequent-used and hard to remember code.
-	b. Record & Remember: It should not be a record and forget, its only a supporting tool.
+Rules of thumb
+-------------------------------------------------------------------------------
+    *   Dont record too much and too detail: it should only comes to frequent-
+        used and hard to remember code.
+
+    *   Record & Remember: It should not be a record and forget, its only a 
+        supporting tool.
+
+View tool
+-------------------------------------------------------------------------------
+    Run liba.exe to view the workbook content in command line. Here are common-
+    used commands:
+    
+    *   Browse git_lib.xlsx at a high level:  
+        $ ./liba -show git_lib.xlsx
+
+    *   Browse the 17th entry of git_lib.xlsx at a detail level:  
+        $ ./liba -show git_lib.xlsx 17
+
+    *   Search for a merge related snippets:                
+        $ ./liba -showfull git_lib.xlsx | grep merge --color
 
 **
